Migration to Awaitility